# Drone-SLAM-Interface

./: .gitignore  README.md
src/drone_slam_interface/: package.xml  setup.cfg  setup.py
src/drone_slam_interface/drone_slam_interface/: save_snapshot_raw.py  save_snapshot_visual.py  slam_bridge.py  slam_types.py
src/sjtu_drone/sjtu_drone_bringup/config/: slam_params.yaml
src/sjtu_drone/sjtu_drone_bringup/launch/: sjtu_drone_bringup.launch.py
src/sjtu_drone/sjtu_drone_description/urdf/: sjtu_drone.urdf.xacro
