<?xml version="1.0"?>
<package format="3">
  <name>drone_slam_interface</name>
  <version>0.1.0</version>
  <description>SLAM state interface for navigation team</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>